--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="FogPlix - Free Anime movies and series watching Android app" />
     <meta property="og:description" content="Download the FogPlix Android app to watch dubbed and subbed Anime series or movies online absolutely free of cost." />
     <meta property="og:url" content="https://fogplix.com" />
-    <meta property="og:site_name" content="FogPlix" />
+    <meta property="og:site_name" content="FogPlix Anime" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Download the FogPlix Android app to watch dubbed and subbed Anime series or movies online absolutely free of cost." />
     <meta name="twitter:title" content="FogPlix - Free Anime movies and series watching Android app" />
@@ -41,7 +41,7 @@
 
             <nav>
                 <i class="fa-solid fa-bars" style="display: none;"></i>
-                <img src="assets/logo.svg" alt="FogPlix" />
+                <img src="assets/logo.svg" alt="FogPlix Anime" />
             </nav>
     
             <div class="response-div">
