--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                 <h3>Q: How to install this app?</h3>
                 <p> <b>Ans:</b> <br>
-                    1) Download the FogPlix Anime apk file by clicking the <a href="https://tinyurl.com/fogplixanime">Download Now</a> button. 
+                    1) Download the <a href="https://tinyurl.com/fogplixanime">fogplix.apk</a> file by clicking the <a href="https://tinyurl.com/fogplixanime">Download Now</a> button. 
                     <br> 
                     2) Open file manager and click on the downloaded apk file and just install. 
                     <br>
