--- a/download.html
+++ b/download.html
@@ -1,3 +1,19 @@
-<script>
-	window.location.assign('https://fogplix.com/apk/fogplix_v3.8.apk');
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Downloading FogPlix Apk</title>
+</head>
+<body>
+	
+	<center>
+		<h1>Downloading has been started. If not started then <a href="https://fogplix.com/apk/fogplix_v3.8.apk">click here to download</a> directly.</h1>
+	</center>
+
+	<script>
+		window.location.assign('https://fogplix.com/apk/fogplix_v3.8.apk');
+	</script>
+</body>
+</html>
+
