--- a/download.html
+++ b/download.html
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Downloading FogPlix Apk</title>
+	<title>Downloading FogPlix Anime Apk</title>
 </head>
 <body>
 	
 	<center>
-		<h1>Downloading has been started. If not started then <a href="https://fogplix.com/apk/fogplix_v4.0.apk">click here to download</a> directly.</h1>
+		<h1>Downloading has been started. If not started then <a href="https://fogplix.com/apk/fogplix_v4.1.apk">click here to download</a> directly.</h1>
 	</center>
 
 	<script>
-		window.location.assign('https://fogplix.com/apk/fogplix_v4.0.apk');
+		window.location.assign('https://fogplix.com/apk/fogplix_v4.1.apk');
 	</script>
 </body>
 </html>
