--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Download the FogPlix Android app to watch dubbed and subbed Anime series or movies online absolutely free of cost." />
+    <meta name="description" content="Dive into the anime realm with Fogplix Anime! Download the Android app for free and enjoy unlimited streaming of dubbed and subbed series and movies." />
     <meta name="robots" content="index, follow" />
 
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="FogPlix - Free Anime movies and series watching Android app" />
-    <meta property="og:description" content="Download the FogPlix Android app to watch dubbed and subbed Anime series or movies online absolutely free of cost." />
+    <meta property="og:title" content="Fogplix Anime - Free Anime watching Android app" />
+    <meta property="og:description" content="Dive into the anime realm with Fogplix Anime! Download the Android app for free and enjoy unlimited streaming of dubbed and subbed series and movies." />
     <meta property="og:url" content="https://fogplix.com" />
-    <meta property="og:site_name" content="FogPlix Anime" />
+    <meta property="og:site_name" content="Fogplix Anime" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:description" content="Download the FogPlix Android app to watch dubbed and subbed Anime series or movies online absolutely free of cost." />
-    <meta name="twitter:title" content="FogPlix - Free Anime movies and series watching Android app" />
+    <meta name="twitter:description" content="Dive into the anime realm with Fogplix Anime! Download the Android app for free and enjoy unlimited streaming of dubbed and subbed series and movies." />
+    <meta name="twitter:title" content="Fogplix Anime - Free Anime watching Android app" />
     <meta name="twitter:image" content="https://i.ibb.co/d2YYwLQ/feature.png" />
 
-    <title>FogPlix - Free Anime movies and series watching Android app</title>
+    <title>Fogplix Anime - Free Anime watching Android app</title>
 
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="https://fogplix.com/assets/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://fogplix.com/assets/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://fogplix.com/assets/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://fogplix.com/assets/favicon-16x16.png">
     
     <link href="assets/style.css" rel="stylesheet">
     <link href="assets/mediaquery.css" rel="stylesheet">
