--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
 
             <footer>
-                Copyright © 2023 &nbsp; <b><a target="_blank" href="https://fogplix.com">FogPlix Anime</a></b>
+                Copyright © 2023 &nbsp; <b><a target="_blank" href="https://fogplix.com">Fogplix Anime</a></b>
             </footer>
         </div>
 
