--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         content="Explore a world of free anime streaming and downloads! Download our Android app for mobile and TV to enjoy a vast collection of anime anytime, anywhere." />
     <meta property="og:url" content="https://fogplix.com" />
     <meta property="og:site_name" content="Fogplix Anime" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="app" />
     <meta name="twitter:description"
         content="Explore a world of free anime streaming and downloads! Download our Android app for mobile and TV to enjoy a vast collection of anime anytime, anywhere." />
     <meta name="twitter:title" content="Fogplix Anime - Free Anime watching Android app" />
