--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Fogplix Anime - Free Anime watching Android app" />
     <meta property="og:description"
         content="Explore a world of free anime streaming and downloads! Download our Android app for mobile and TV to enjoy a vast collection of anime anytime, anywhere." />
-    <meta property="og:url" content="https://fogplix.com" />
+    <meta property="og:url" content="https://app.foganime.com" />
     <meta property="og:site_name" content="Fogplix Anime" />
     <meta name="twitter:card" content="app" />
     <meta name="twitter:description"
@@ -25,10 +25,10 @@
 
     <title>Fogplix Anime - Free Anime watching Android app</title>
 
-    <link rel="icon" type="image/x-icon" href="https://fogplix.com/assets/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://fogplix.com/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://fogplix.com/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://fogplix.com/assets/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="https://app.foganime.com/assets/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://app.foganime.com/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://app.foganime.com/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://app.foganime.com/assets/favicon-16x16.png">
 
     <link href="assets/style.css" rel="stylesheet">
     <link href="assets/mediaquery.css" rel="stylesheet">
@@ -67,16 +67,16 @@
                             </button>
 
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="https://fogplix.com/download-mobile.html">For Android Mobile</a></li>
-                                <li><a class="dropdown-item" href="https://fogplix.com/download-tv.html">For Android TV</a></li>
+                                <li><a class="dropdown-item" href="https://app.foganime.com/download-mobile.html">For Android Mobile</a></li>
+                                <li><a class="dropdown-item" href="https://app.foganime.com/download-tv.html">For Android TV</a></li>
                             </ul>
                         </div> -->
-                        <a href="https://fogplix.com/download-mobile.html">
+                        <a href="https://app.foganime.com/download-mobile.html">
                             <button class="download-btn mb-3">
                                 <i class="fa-solid fa-download"></i> Download (For Mobile)
                             </button>
                         </a>
-                        <a href="https://fogplix.com/download-tv.html">
+                        <a href="https://app.foganime.com/download-tv.html">
                             <button class="download-btn">
                                 <i class="fa-solid fa-download"></i> Download (For Android TV)
                             </button>
@@ -126,8 +126,8 @@
 
                 <h3>Q: How to install this app?</h3>
                 <p> <b>Ans:</b> <br>
-                    1) Download the <a href="https://fogplix.com/download-mobile.html">fogplix.apk</a> file by clicking
-                    the <a href="https://fogplix.com/download-mobile.html">Download Now</a> button.
+                    1) Download the <a href="https://app.foganime.com/download-mobile.html">fogplix.apk</a> file by clicking
+                    the <a href="https://app.foganime.com/download-mobile.html">Download Now</a> button.
                     <br>
                     2) Open file manager and click on the downloaded apk file and just install.
                     <br>
@@ -148,7 +148,7 @@
             </div>
 
             <footer>
-                Copyright © 2023 &nbsp; <b><a target="_blank" href="https://fogplix.com">Fogplix Anime</a></b>
+                Copyright © 2024 &nbsp; <b><a target="_blank" href="https://app.foganime.com">Fogplix Anime</a></b>
             </footer>
         </div>
 
