--- a/download-mobile.html
+++ b/download-mobile.html
@@ -8,11 +8,11 @@
 <body>
 	
 	<center>
-		<h1>Downloading has been started. If not started then <a href="https://fogplix.com/apk/fogplix_mobile_v5.2.apk">click here to download</a> directly.</h1>
+		<h1>Downloading has been started. If not started then <a href="https://app.foganime.com/apk/Fogplix-Anime_v5.3.apk">click here to download</a> directly.</h1>
 	</center>
 
 	<script>
-		window.location.assign('https://fogplix.com/apk/fogplix_mobile_v5.2.apk');
+		window.location.assign('https://app.foganime.com/apk/Fogplix-Anime_v5.3.apk');
 	</script>
 </body>
 </html>
