--- a/index.html
+++ b/index.html
@@ -6,29 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description"
-        content="Explore a world of free anime streaming and downloads! Download our Android app for mobile and TV to enjoy a vast collection of anime anytime, anywhere." />
+    <meta name="description" content="Fogplix Anime is an application where you can watch or download over ten thousand anime series and movies for free. Download the Fogplix Anime app now." />
     <meta name="robots" content="index, follow" />
 
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Fogplix Anime - Free Anime watching Android app" />
-    <meta property="og:description"
-        content="Explore a world of free anime streaming and downloads! Download our Android app for mobile and TV to enjoy a vast collection of anime anytime, anywhere." />
-    <meta property="og:url" content="https://app.foganime.com" />
+    <meta property="og:description" content="Fogplix Anime is an application where you can watch or download over ten thousand anime series and movies for free. Download the Fogplix Anime app now." />
+    <meta property="og:url" content="https://fogplix-anime.com" />
     <meta property="og:site_name" content="Fogplix Anime" />
     <meta name="twitter:card" content="app" />
-    <meta name="twitter:description"
-        content="Explore a world of free anime streaming and downloads! Download our Android app for mobile and TV to enjoy a vast collection of anime anytime, anywhere." />
+    <meta name="twitter:description" content="Fogplix Anime is an application where you can watch or download over ten thousand anime series and movies for free. Download the Fogplix Anime app now." />
     <meta name="twitter:title" content="Fogplix Anime - Free Anime watching Android app" />
-    <meta name="twitter:image" content="https://i.ibb.co/d2YYwLQ/feature.png" />
+    <meta name="twitter:image" content="https://i.ibb.co/rssscnM/capture.png" />
 
     <title>Fogplix Anime - Free Anime watching Android app</title>
 
-    <link rel="icon" type="image/x-icon" href="https://app.foganime.com/assets/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://app.foganime.com/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://app.foganime.com/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://app.foganime.com/assets/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
 
     <link href="assets/style.css" rel="stylesheet">
     <link href="assets/mediaquery.css" rel="stylesheet">
@@ -55,33 +52,19 @@
             <div class="response-div">
 
                 <div class="download-info-div">
-                    <h1 class="solo-title">Watch and download anime movies and series absolutely free of cost. (Dub/Sub)</h1>
+                    <h1 class="solo-title">Watch or download anime movies and series absolutely free of cost. (Dub/Sub)</h1>
 
                     <div class="button-container">
-
-                        <!-- <div class="dropdown">
-
-                            <button class="download-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
-                                id="stable-download"> <i class="fa-solid fa-download fa-flip"></i>
-                                Download Now (v5.1)
-                            </button>
-
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="https://app.foganime.com/download-mobile.html">For Android Mobile</a></li>
-                                <li><a class="dropdown-item" href="https://app.foganime.com/download-tv.html">For Android TV</a></li>
-                            </ul>
-                        </div> -->
-                        <a href="https://app.foganime.com/download-mobile.html">
+                        <a href="https://fogplix-anime.com/download-mobile.html">
                             <button class="download-btn mb-3">
                                 <i class="fa-solid fa-download"></i> Download (For Mobile)
                             </button>
                         </a>
-                        <a href="https://app.foganime.com/download-tv.html">
+                        <a href="https://fogplix-anime.com/download-tv.html">
                             <button class="download-btn">
                                 <i class="fa-solid fa-download"></i> Download (For Android TV)
                             </button>
                         </a>
-
                     </div>
 
                     <div class="security-verify-div">
@@ -107,15 +90,15 @@
 
                 <div class="thumnail-preview-div">
 
-                    <img oncontextmenu="return false;" data-fancybox data-src="images/1.png"
+                    <img oncontextmenu="return false;" data-fancybox data-src="https://i.ibb.co/L1t0ZWW/1.png"
                         src="https://i.ibb.co/L1t0ZWW/1.png" />
-                    <img oncontextmenu="return false;" data-fancybox data-src="images/2.png"
+                    <img oncontextmenu="return false;" data-fancybox data-src="https://i.ibb.co/FHzpkYH/2.png"
                         src="https://i.ibb.co/FHzpkYH/2.png" />
-                    <img oncontextmenu="return false;" data-fancybox data-src="images/3.png"
+                    <img oncontextmenu="return false;" data-fancybox data-src="https://i.ibb.co/SfZhg7y/3.png"
                         src="https://i.ibb.co/SfZhg7y/3.png" />
-                    <img oncontextmenu="return false;" data-fancybox data-src="images/4.png"
+                    <img oncontextmenu="return false;" data-fancybox data-src="https://i.ibb.co/60WmkMD/4.png"
                         src="https://i.ibb.co/60WmkMD/4.png" />
-                    <img oncontextmenu="return false;" data-fancybox data-src="images/5.png"
+                    <img oncontextmenu="return false;" data-fancybox data-src="https://i.ibb.co/hfpxmVs/5.png"
                         src="https://i.ibb.co/hfpxmVs/5.png" />
 
                 </div>
@@ -126,8 +109,8 @@
 
                 <h3>Q: How to install this app?</h3>
                 <p> <b>Ans:</b> <br>
-                    1) Download the <a href="https://app.foganime.com/download-mobile.html">fogplix.apk</a> file by clicking
-                    the <a href="https://app.foganime.com/download-mobile.html">Download Now</a> button.
+                    1) Download the <a href="https://fogplix-anime.com/download-mobile.html">fogplix anime.apk</a> file by clicking
+                    the <a href="https://fogplix-anime.com/download-mobile.html">Download Now</a> button.
                     <br>
                     2) Open file manager and click on the downloaded apk file and just install.
                     <br>
@@ -148,7 +131,7 @@
             </div>
 
             <footer>
-                Copyright © 2024 &nbsp; <b><a target="_blank" href="https://app.foganime.com">Fogplix Anime</a></b>
+                Copyright © 2024 &nbsp; <b><a target="_blank" href="https://fogplix-anime.com">Fogplix Anime</a></b>
             </footer>
         </div>
 
