--- a/download-tv.html
+++ b/download-tv.html
@@ -8,11 +8,11 @@
 <body>
 	
 	<center>
-		<h1>Downloading has been started. If not started then <a href="https://venomdino.github.io/FogPlix-Landing-Page/apk/Fogplix_TV_v1.4.apk">click here to download</a> directly.</h1>
+		<h1>Downloading has been started. If not started then <a href="https://fogplix-anime.com/apk/Fogplix_TV_v1.4.apk">click here to download</a> directly.</h1>
 	</center>
 
 	<script>
-		window.location.assign('https://venomdino.github.io/FogPlix-Landing-Page/apk/Fogplix_TV_v1.4.apk');
+		window.location.assign('https://fogplix-anime.com/apk/Fogplix_TV_v1.4.apk');
 	</script>
 </body>
 </html>
